--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="">Inicio</a>
             </li>
             <li class="nav-item">
