--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/help_desk.png')">
+    <header class="masthead" style="background-image: url('img/inicio_bg.JPG')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
