--- a/index.html
+++ b/index.html
@@ -11,58 +11,32 @@
     <title>Centro de Ayuda SGD</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/ayuda/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/ayuda/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/ayuda/img/logo.png" />
+
     <!-- Custom styles for this template -->
-    <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link href="/ayuda/css/clean-blog.min.css" rel="stylesheet">
 
   </head>
 
   <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="img/logo.png" alt="logo_cero_papeles" class="d-inline-block align-top" width="35" height="35">
-          Centro de ayuda SGD
-        </a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="docs/manuales.html">Manuales</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="docs/tutoriales.html">Tutoriales</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="docs/videos_promo.html">Videos Promocionales</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
+    <div id="navbar"></div>
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/inicio_bg.JPG')">
+    <header class="masthead" style="background-image: url('/ayuda/img/inicio_bg.JPG')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Ayuda</h1>
+              <h1>Centro de Ayuda SGD</h1>
               <span class="subheading">Aquí podrás encontrar toda la información necesaria para poder usar el Sistema de Gestión Documental</span>
             </div>
           </div>
@@ -118,45 +92,21 @@
         </div>
       </div>
     </div>
-
     <hr>
-
-    <!-- Footer -->
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 col-md-10 mx-auto">
-            <ul class="list-inline text-center">
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <span class="fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                  </span>
-                </a>
-              </li>
-            </ul>
-            <p class="copyright text-muted">Copyright &copy; Sistema de Gestión Documental 2017</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
+    <div id="footer"></div>
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/ayuda/vendor/jquery/jquery.min.js"></script>
+    <script src="/ayuda/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/clean-blog.min.js"></script>
-
+    <script src="/ayuda/js/clean-blog.min.js"></script>
+    <script src="/ayuda/js/centro_ayuda.js"></script>
+    <script>
+      $(function(){
+        chargeFragments();
+        $("#inicio_link").addClass("active");
+      });
+    </script>
   </body>
 
 </html>
